After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705064 - tests: GenericTreeModel tests are failing in debug build of Python
tests: GenericTreeModel tests are failing in debug build of Python
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-29 08:26 UTC by Simon Feltman
Modified: 2013-07-29 08:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Ensure exceptions set in closure out argument marshaling are printed (4.44 KB, patch)
2013-07-29 08:29 UTC, Simon Feltman
none Details | Review
Ensure exceptions set in closure out argument marshaling are printed (3.92 KB, patch)
2013-07-29 08:31 UTC, Simon Feltman
none Details | Review
Ensure exceptions set in closure out argument marshaling are printed (3.36 KB, patch)
2013-07-29 08:44 UTC, Simon Feltman
committed Details | Review

Description Simon Feltman 2013-07-29 08:26:37 UTC
The test test_generictreemodel.TestReturnsAfterError.test_get_column_type 
is raising the following exception:

TypeError: Must be gobject.GType, not gobject.GType
Comment 1 Simon Feltman 2013-07-29 08:29:04 UTC
Created attachment 250351 [details] [review]
Ensure exceptions set in closure out argument marshaling are printed

Call PyErr_Print when an exception occures after marshaling closure
out arguments. These exceptions were being ignored and cleared out
only to show up in debug builds of Python.
Comment 2 Simon Feltman 2013-07-29 08:31:16 UTC
Created attachment 250352 [details] [review]
Ensure exceptions set in closure out argument marshaling are printed

(Removed unnecessary call to PyErr_Occurred())
Comment 3 Simon Feltman 2013-07-29 08:44:35 UTC
Pushed with usage of zip instead of zip_longest.

The following fix has been pushed:
ec3de76 Ensure exceptions set in closure out argument marshaling are printed
Comment 4 Simon Feltman 2013-07-29 08:44:37 UTC
Created attachment 250354 [details] [review]
Ensure exceptions set in closure out argument marshaling are printed

Call PyErr_Print when an exception occurs after marshaling closure
out arguments. These exceptions were being ignored and cleared out
only to show up in debug builds of Python.