Ensure exceptions set in closure out argument marshaling are printed

Call PyErr_Print when an exception occurs after marshaling closure
out arguments. These exceptions were being ignored and cleared out
only to show up in debug builds of Python.

https://bugzilla.gnome.org/show_bug.cgi?id=705064