gi/pygi-closure.c
@@ -33,6 +33,9 @@ _pygi_closure_assign_pyobj_to_retval (gpointer retval, PyObject *object,
                                       GITransfer transfer)
 {
     GIArgument arg = _pygi_argument_from_object (object, type_info, transfer);
+    if (PyErr_Occurred ())
+        return;
+
     GITypeTag type_tag = g_type_info_get_tag (type_info);
 
     if (retval == NULL)
@@ -558,6 +561,11 @@ _pygi_closure_handle (ffi_cif *cif,
     }
 
     _pygi_closure_set_out_arguments (closure->info, retval, out_args, result);
+    if (PyErr_Occurred ()) {
+        _pygi_closure_clear_retval (closure->info, result);
+        PyErr_Print();
+    }
+
     Py_DECREF (retval);
 
 end:
